--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,5 +21,7 @@ steps:
   displayName: 'npm install and build'
 
 - task: PublishBuildArtifacts@1
-  inputs: 
-    pathtoPublish: $(build.artifactstagingdirectory)
+  inputs:
+    PathtoPublish: '$(Build.ArtifactStagingDirectory)'
+    ArtifactName: 'drop'
+    publishLocation: 'Container'
