Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,6 +22,6 @@ steps:
 
 - task: PublishBuildArtifacts@1
   inputs:
-    PathtoPublish: '$(ArtifactStagingDirectory)/build'
+    PathtoPublish: 'build'
     ArtifactName: 'drop'
     publishLocation: 'Container'
