--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "url": "git@github.com:coreui/coreui-free-react-admin-template.git"
   },
   "dependencies": {
+    "@ant-design/icons": "^4.0.2",
     "@aspnet/signalr": "^1.1.4",
     "@coreui/coreui": "^2.1.12",
     "@coreui/coreui-plugin-chartjs-custom-tooltips": "^1.3.1",
@@ -23,6 +24,7 @@
     "@material-ui/core": "^4.4.1",
     "@material-ui/icons": "^3.0.2",
     "ace-builds": "^1.4.7",
+    "antd": "4.0.0",
     "bootstrap": "^4.3.1",
     "chart.js": "^2.7.3",
     "classnames": "^2.2.6",
